# full-disk-encryption

./: Cargo.toml  Makefile  README.md  deny.toml
src/: disk.rs  key_broker.rs  main.rs  ovmf_var.rs  quote.rs  td_report.rs
tools/image/: enroll_vars.py  fde-image.sh  netplan.yaml
tools/image/scripts/: install  partition
tools/initramfs/: modules
tools/initramfs/hooks/: fde-agent
tools/initramfs/scripts/init-premount/: fde-agent
tools/ovmfkeyenroll/: README.md  pyproject.toml
tools/ovmfkeyenroll/ovmfkeyenroll/: secure_boot.py  var_enroll.py
