[package]
name = "fde-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { version = "4.1.8", features = ["derive"] }
cryptsetup-rs = "0.3.2"
log = "0.4.17"
anyhow = "1.0.69"
reqwest = { version = "0.11.14", features = ["rustls-tls", "json"], default-features = false}
rustls = "0.20.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
efivar = "1.0.3"
uuid = {version = "1.3.0", features = ["v5", "macro-diagnostics"]}
zeroize = "1.6.0"
webpki-roots = "0.22"
tdx-attest-rs = { git = "https://github.com/intel/SGXDataCenterAttestationPrimitives", tag = "DCAP_1.16" }

